--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model TranslationModel
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h3 class="display-2">Funny translator :)</h3>
+    <form asp-controller="Home" asp-action="Translate">
+        <label class="mt-4">Input:</label>
+        <input class="form-control" type="text" asp-for="Input"/>
+
+        <label class="mt-4">Result:</label>
+        <input class="form-control" type="text" asp-for="Result" readonly/>
+
+        <button class="btn-primary mt-3" type="submit">Confirm</button>
+    </form>
 </div>
